# console.color

./: .gitignore  CMakeLists.txt  README.md
example/: CMakeLists.txt  main.cpp
include/: Win32Handler.h  bgcolor.h  bold.h  bright.h  brighten.h  clear.h  color.h  colors.h  colors_w32.h  console_colors.h  end.h  enums.h  light.h  reset.h  reset_bgcolor.h  reset_color.h  set.h
src/: CMakeLists.txt  Win32Handler.cpp  bgcolor.cpp  bgcolor_w32.cpp  bold.cpp  bold_w32.cpp  bright.cpp  bright_w32.cpp  brighten.cpp  brighten_w32.cpp  clear.cpp  clear_w32.cpp  color.cpp  color_w32.cpp  end.cpp  end_w32.cpp  light.cpp  light_w32.cpp  reset.cpp  reset_bgcolor.cpp  reset_bgcolor_w32.cpp  reset_color.cpp  reset_color_w32.cpp  reset_w32.cpp  set.cpp  set_w32.cpp
tests/: CMakeLists.txt  main.cpp  main_w32.cpp
